<resources>
    <string name="app_name">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="retry">retry</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Stats</string>
    <string name="todo">TODO</string>
    <string name="hp">HP</string>
</resources>